<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/intro_top_padding"
            android:text="@string/intro"
            android:textSize="@dimen/intro_text_size" />

        <TextView
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/question_top_padding"
            android:text="@string/question_1"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radio_group_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/radio1ButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1_button_A"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio1ButtonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1_button_B"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio1ButtonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1_button_C"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio1ButtonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1_button_D"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

        </RadioGroup>

        <TextView
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/question_top_padding"
            android:text="@string/question_2"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radio_group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/radio2ButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2_button_A"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio2ButtonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2_button_B"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio2ButtonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2_button_C"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio2ButtonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2_button_D"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

        </RadioGroup>

        <TextView
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/question_top_padding"
            android:text="@string/question_3"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radio_group_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/radio3ButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio3_button_A"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio3ButtonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio3_button_B"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio3ButtonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio3_button_C"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/radio3ButtonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio3_button_D"
                android:textColor="@color/colorText"
                android:textSize="@dimen/radio_button_text_size" />

        </RadioGroup>

        <TextView
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/question_top_padding"
            android:text="@string/question_4"
            android:textSize="@dimen/question_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/view_padding">

            <CheckBox
                android:id="@+id/checkBox4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_4a"
                android:textColor="@color/colorText"
                android:textSize="@dimen/checkbox_text_size" />

            <CheckBox
                android:id="@+id/checkBox4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_4b"
                android:textColor="@color/colorText"
                android:textSize="@dimen/checkbox_text_size" />

            <CheckBox
                android:id="@+id/checkBox4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_4c"
                android:textColor="@color/colorText"
                android:textSize="@dimen/checkbox_text_size" />

            <CheckBox
                android:id="@+id/checkBox4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_4d"
                android:textColor="@color/colorText"
                android:textSize="@dimen/checkbox_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/question_top_padding"
            android:text="@string/question_5"
            android:textColor="@color/colorText"
            android:textSize="@dimen/question_text_size" />

        <EditText
            android:id="@+id/question_5_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/answer_text_margin"
            android:layout_marginRight="@dimen/answer_text_margin"
            android:hint="@string/question_5_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/answer_text_size" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submitQuiz"
            android:text="@string/button_text" />

    </LinearLayout>

</ScrollView>